# keyboard

./: .gitignore  .gitmodules  README.md  fp-lib-table  keyboard.kicad_prl  keyboard.kicad_pro  keyboard.kicad_sch  sym-lib-table
firmware/: Cargo.toml  lspconfig.lua
firmware/firmware/: Cargo.toml
firmware/firmware/src/: main.rs
firmware/keyboard/: Cargo.toml
firmware/keyboard/src/: lib.rs
firmware/src/: keyboard.rs  main.rs
hardware/: keyboard.kicad_pro  keyboard.kicad_sch
