[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hardware interfaces
embedded-hal = { version = "0.2.5", features = ["unproven"] }

# Logging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# The specific board
seeeduino-xiao-rp2040 = "0.4.0"

# Ports
port-expander = "0.4.0"

#Other
fugit = "0.3.6"
usbd-human-interface-device = { version = "0.4.4", features = ["defmt"] }
shared-bus = "0.3.1"
heapless = "0.8.0"
